style : 파비콘 변경, 기본 색상, 아이콘 추가, 필요없는 이미지 삭제

--- a/vue3-quasar-app/src/assets/scss/app.scss
+++ b/vue3-quasar-app/src/assets/scss/app.scss
@@ -1,7 +1,6 @@
-// app global css in SCSS form
 @import 'variables';
 @import 'theme';
-@import 'fonts/fonts';
+@import 'fonts';
 @import 'mixins';
 
 /** common */
