--- a/vue3-quasar-app/src/css/quasar.variables.scss
+++ b/vue3-quasar-app/src/css/quasar.variables.scss
@@ -1,25 +1,13 @@
-// Quasar SCSS (& Sass) Variables
-// --------------------------------------------------
-// To customize the look and feel of this app, you can override
-// the Sass/SCSS variables found in Quasar's source Sass/SCSS files.
+@import '../assets/scss/variables';
+@import '../assets/scss/theme';
+@import '../assets/fonts/fonts';
+@import '../assets/scss/mixins';
 
-// Check documentation for full list of Quasar variables
+/** common */
+@import '../assets/scss/common';
+@import '../assets/scss/styles';
 
-// Your own variables (that are declared here) and Quasar's own
-// ones will be available out of the box in your .vue/.scss/.sass files
+/** layout */
+@import '../assets/scss/layout/header';
 
-// It's highly recommended to change the default colors
-// to match your app's branding.
-// Tip: Use the "Theme Builder" on Quasar's documentation website.
-
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
-
-$dark      : #1D1D1D;
-$dark-page : #121212;
-
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$primary: #f98686; //test
