--- a/vue3-quasar-app/src/assets/scss/_common.scss
+++ b/vue3-quasar-app/src/assets/scss/_common.scss
@@ -1,9 +1,3 @@
-html {
-  scroll-behavior: smooth;
-
-  font-size: 1rem;
-}
-
 body,
 p,
 span,
@@ -17,6 +11,12 @@ hr {
   box-sizing: border-box;
 }
 
+body {
+  background-color: #fff3f3;
+  font-family: 'SUITE-Regular', cursive;
+  font-size: 1rem;
+}
+
 ul,
 ol {
   list-style: none;
@@ -25,31 +25,13 @@ ol {
 a {
   text-decoration: none;
   list-style: none;
-  &:hover {
-    text-decoration: none;
-  }
 }
 
-// base reset css start
-div,
-span,
-iframe,
-h1,
-h2,
-h3,
-h4 {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-body {
-  background-color: #fff3f3;
-  font-family: 'SUITE-Regular', cursive;
-  font-size: 1rem;
+input:focus,
+button:focus,
+select:focus,
+textarea:focus {
+  outline: none;
 }
 
 button {
@@ -61,4 +43,8 @@ button {
   background: none;
 
   cursor: pointer;
+}
+
+input::placeholder {
+  color: #ffffffde;
 }
